--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
+/* Fix iOS issue where parallax fixed background-attachments do not remain in a fixed position. */
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(photos/2452.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
 	background-color: black;
 	/*background-color: #000000;*/
@@ -151,15 +168,6 @@ body {
 			/*background-size: 80%;*/
 			min-height: 90%; 
 		}
-/* Fix iOS issue where fixed background-attachments do not stay fixed */
-		.parallax {
-			background-attachment: scroll;
-		}
-		.parallax {
-			background-attachment: initial;
-		}
-
-
 		/*#resume_parallax {
 		  background-image: url("paper-50x66.png");
 		  min-height: 20%; 
