--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /* Fix iOS issue where parallax fixed background-attachments do not remain in a fixed position. */
-body:before {
+/*body:before {
   content: "";
   display: block;
   position: fixed;
@@ -8,12 +8,12 @@ body:before {
   width: 100%;
   height: 100%;
   z-index: -10;
-  background: url(photos/2452.jpg) no-repeat center center;
+  background: url() no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
 
 body {
 	background-color: black;
