--- a/main.css
+++ b/main.css
@@ -168,7 +168,7 @@ body {
 			display: block;
 			margin: auto;
 			max-width: 100%; 
-			height: 50%; 
+			/*height: 50%; */
 		}
 		.parallax {
 			background-attachment: fixed;
