--- a/main.css
+++ b/main.css
@@ -114,6 +114,20 @@ div#education div span.date {
 	padding: 2%;
 	text-align: center; 
 }
+.youtube_video_container {
+	position: relative;
+	padding-bottom: 55%;
+	height: 0;
+	overflow: hidden;
+	max-width: 100%;
+}
+.youtube_video_container iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /*Parallax Scrolling*/
 /* Fix iOS issue where parallax fixed background-attachments do not remain in a fixed position. --unsupported feature on iOS devices*/
