--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 	margin: 0;
 	padding-top: 24px;
 }
-section {
+#header, .icon-menu, section {
 	background-color: rgba(244,244,256,0.975);
 	border-style: solid;
 	border-width: 5px; 
