--- a/main.css
+++ b/main.css
@@ -137,6 +137,7 @@ div#education div span.date {
 	background-color: inherit;
 	border-style: solid none none none;
 	color: white;
+	font-family: Copperplate, Papyrus, fantasy;
 	font-size: 3em;
 	margin: 0;
 	padding: 2%;
