--- a/main-trial.css
+++ b/main-trial.css
@@ -2,10 +2,27 @@
 body {
 	background-color: black;
 	color: white;
-	height: 100vw;
+	height: 100vh;
 	margin: 0;
 	width: 100vw;
 }
+
+container {
+	height: 100%;
+	overflow-y: scroll;
+	scroll-snap-type: y mandatory;
+	width: 100%;
+	
+	section {
+		align-items: center;
+		display: flex;
+		height: 100vh;
+		justify-content: center;
+		scroll-snap-align: start;
+		width: 100vw;
+	}
+}
+
 img { 
 	max-height: 100%;
 	max-width: 100%;
