--- a/main-trial.css
+++ b/main-trial.css
@@ -8,6 +8,7 @@ body {
 }
 
 container {
+	display: flex;
 	height: 100%;
 	overflow-y: scroll;
 	scroll-snap-type: y mandatory;
@@ -16,6 +17,7 @@ container {
 	section {
 		align-items: center;
 		display: flex;
+		flex: none;
 		height: 100vh;
 		justify-content: center;
 		scroll-snap-align: start;
